<resources>
    <string name="app_name">Дзынь</string>
    <string name="news_one">Планета Юпитер готовит вторжение на Землю. К чему необходимо готовиться?</string>
    <string name="news_two">Китай и Россия на самом деле не те, за кого себя выдают. На самом деле, они…</string>
    <string name="news_three">Фольга из шапочки больше не помогает. Пермский маг рассказал, как защититься от новых ультразвуковых волн</string>
    <string name="news_four">Он не тот, за кого себя выдаёт! Якутский шаман раскрыл тайну пермского самозванца</string>
    <string name="news_five">Вас постоянно обманывают! С таким заявлением выступил главный герой романа Война и мир после вывода советских войск из Авганистана</string>
    <string name="news_six">Шок! Певица Гурцкая на самом деле певица, но не Гурская</string>
    <string name="news_seven">Пенсионный возраст поднимать это вам не мешки ворочить. Президент Франции пожаловался на неблагодарный народ</string>
    <string name="news_eight">Пока Франция не стала частью России, всё же не стоит называть меня её президентом - Путин В.В. </string>
    <string name="news_nine">Каждое уважающее себя информ издание просто обязано хоть в одной новости упомянуть Северную Корею хотя бы дважды. Таковы тенденции - лидер Северной Кореи Ким Чен Ын </string>
    <string name="news_ten">Новость, на которую у меня уже не хватило фантазии, да я и не старался уже</string>
    <string name="empty_request">Пустой поисковый запрос</string>
    <string name="del_dis">Вылечить болезнь</string>
    <string name="del_phob">Устранить фобию</string>
    <string name="add_power">Получить заряд</string>
    <string name="del_dis_comp">Болезнь вылечена</string>
    <string name="del_phob_comp">Фобия устранена</string>
    <string name="add_power_comp">Заряд получен</string>
    <string name="searcher">Поиск</string>
    <string name="null_search_query">Пустой поисковый запрос</string>
</resources>