<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/upiter"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_one"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/china_and_russia"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_two"
                android:textSize="23sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/hat"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_three"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/shaman"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_four"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/lenin"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_five"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/singer"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_six"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/pens_age"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_seven"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/putin"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_eight"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/kim"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_nine"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/xz"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/news_ten"
                android:textSize="20sp"
                android:textColor="@color/purple_200"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>